# Algorithmic_Design

./: .gitignore  README.md
01_Strassen_alg/: CMakeLists.txt  Doxyfile  Makefile  README.md
01_Strassen_alg/src/: main.c  matrix.c  strassen.c
02_Strassen_alg_rect/: .gitignore  README.md
02_Strassen_alg_rect/include/: strassen.h
02_Strassen_alg_rect/src/: main.c  strassen.c
03_Binary_heaps/: .gitignore  README.md
03_Binary_heaps/include/: binheap.h
03_Binary_heaps/src/: binheap.c  total_orders.c
03_Binary_heaps/tests/: test_delete_min.c
04_Binary_heaps_noswap/: CMakeLists.txt  README.md
04_Binary_heaps_noswap/include/: binheap.h
04_Binary_heaps_noswap/src/: binheap.c
05_Sorting/: .gitignore  CMakeLists.txt  README.md
05_Sorting/include/: heap_sort.h  quick_sort.h  select.h
05_Sorting/src/: heap_sort.c  insertion_sort.c  main.c  quick_sort.c  select.c
06_Dijkstra/: .gitignore  CMakeLists.txt  README.md  tests
06_Dijkstra/data/: input.txt
06_Dijkstra/include/: ArrayPriorityQueue.h  Dijkstra.h  Graph.h  List.h  Node.h  PriorityQueue.h  utilities.h
06_Dijkstra/src/: ArrayPriorityQueue.c  Dijkstra.c  Graph.c  List.c  Node.c  PriorityQueue.c  main.c  main_real.c  test.c  utilities.c
Binary_heaps/: README.md
Binary_heaps/include/: binheap.h  total_orders.h
Binary_heaps/src/: binheap.c
Binary_heaps/tests/: test_insert.c
Binary_heaps_noswap/: CMakeLists.txt
Binary_heaps_noswap/src/: binheap.c
Homeworks/: .Rhistory  .gitignore  Plot.R  README.md  data.RData  homework_01.md  homework_01_SOLVED.md  homework_02.md  homework_02_01_SOLVED.md  homework_02_02_SOLVED.md  homework_02_SOLVED.md  homework_03_01_SOLVED.md  homework_03_02_SOLVED.md  homework_03_SOLVED.md  homework_04_SOLVED.md  script.sh  times_Strassen.csv  times_delete_min.csv
Sorting/: .gitignore  README.md  test_sorting
Strassen_alg/: .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md  main.c  matrix.c  script.sh  script_ULYSSES-BETA.sh  strassen.c  strassen.h  test.c
Strassen_alg_rect/: matrix.h  strassen.c  test.h
(+60 files in other folders)
